--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@ body {
 <!-- Note -->
 <div style="background:yellow;padding:5px">
   <h1 style="text-align:center">Nilanthi Tea Factory</h1>
-    <img src="usflag.gif" style = "width:150px;hight:150px";>
-  <img src="any1.gif" style = "width:150px;hight:100px";>
- <img src="tea2.jpg" style = "width:200px;hight:50px";>
+    <img src="img/usflag.gif" style = "width:150px;hight:150px";>
+  <img src="img/any1.gif" style = "width:150px;hight:100px";>
+ <img src="img/tea2.jpg" style = "width:200px;hight:50px";>
 </div>
 
 <!-- Header -->
 <div class="header">
   <h1>The Best Tea in the World</h1>
-   <img src="tea1.jpg" style = "width:200px;hight:50px";>   <img src="tea1.jpg" style = "width:200px;hight:50px";>   <img src="tea1.jpg" style = "width:200px;hight:50px";>   
-   <img src="tea1.jpg" style = "width:200px;hight:50px";>   <img src="tea1.jpg" style = "width:200px;hight:50px";>   <img src="tea1.jpg" style = "width:200px;hight:50px";>
+   <img src ="img/tea1.jpg" style = "width:200px;hight:50px";>   <img src="img/tea1.jpg" style = "width:200px;hight:50px";>   <img src="img/tea1.jpg" style = "width:200px;hight:50px";>   
+   <img src="img/tea1.jpg" style = "width:200px;hight:50px";>   <img src="ig/tea1.jpg" style = "width:200px;hight:50px";>   <img src="img/tea1.jpg" style = "width:200px;hight:50px";>
   <p><b>We produce Green and Black Tea for 120 countries..!!</b> layout.</p>
 </div>
 
@@ -119,24 +119,24 @@ body {
   <a href="#">
   <nsec1>
 		<a href="index1.html"> &nbspAbout Us </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index2.html"> </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index3.html">  </a>
+		<a href="index2.html"> </a>
+		<a href="index3.html">  </a>
 
 		</nsec1></a>
   <a href="#">
   
   		<nsec2>
 		<a href="index4.html"> </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="index2.html">Products </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index6.html"> </a>
+		<a href="index2.html">Products </a>
+		<a href="index6.html"> </a>
 		
 		</nsec2> </a>
   <a href="#">
   
    		<nsec2>
 		<a href="index4.html"> </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <a href="index7.html">Ordering </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index6.html"> </a>
+		 <a href="index7.html">Ordering </a>
+		<a href="index6.html"> </a>
 		
 		</nsec2> </a>
   
@@ -154,7 +154,7 @@ body {
 <div class="row">
   <div class="side">
     <h2> About Tea </h2>
-	 <img src="tea4.jpg" style = "width:200px;hight:50px";>
+	 <img src="img/tea4.jpg" style = "width:200px;hight:50px";>
     <h5>Tea production is one of the main sources of foreign exchange for Sri Lanka (formerly called Ceylon). Sri Lanka is the world's fourth-largest producer 
 	of tea. 
 The humidity, cool temperatures, and rainfall of the country's central highlands provide a climate that favors the production of high-quality tea. 
@@ -171,22 +171,22 @@ introduced to the country in 1867 by James Taylor, a British planter who arrived
     <li>Tea may help with weight loss</li>
     <li>Tea may help protect your bones</li>
     <li>Tea may keep your smile bright</li><h3></p>
-	<img src="tea3.jpg" style = "width:200px;hight:200px";>
+	<img src="img/tea3.jpg" style = "width:200px;hight:200px";>
 
   </div>
   <div class="main">
     <h2>Nilanthi Tea Factory</h2>
    
-	<img src="gum7.jpg" style = "width:400px;hight:100px";><img src="b1.jpg" style = "width:400px;hight:100px";>
-    <div class="takimg" style="height:200px;"><img src="any45.gif" style = "width:150px;hight:100px";>
-	<img src="any45.gif" style = "width:150px;hight:100px";><img src="any45.gif" style = "width:150px;hight:100px";><img src="any45.gif" style = "width:150px;hight:100px";>
-	<img src="any45.gif" style = "width:150px;hight:100px";><img src="any45.gif" style = "width:150px;hight:100px";></div>
+	<img src="img/gum7.jpg" style = "width:400px;hight:100px";><img src="img/b1.jpg" style = "width:400px;hight:100px";>
+    <div class="img/takimg" style="height:200px;"><img src="img/any45.gif" style = "width:150px;hight:100px";>
+	<img src="img/any45.gif" style = "width:150px;hight:100px";><img src="img/any45.gif" style = "width:150px;hight:100px";><img src="img/any45.gif" style = "width:150px;hight:100px";>
+	<img src="img/any45.gif" style = "width:150px;hight:100px";><img src="img/any45.gif" style = "width:150px;hight:100px";></div>
    
     <br><br><br>
     <h2>Company Events</h2>
     
-    <div class="takimg" style="height:200px;"><img src="p1.jpg" style = "width:200px;hight:200px";><img src="p2.jpg" style = "width:200px;hight:200px";>
-	<img src="p3.jpg" style = "width:200px;hight:200px";><img src="p4.jpg" style = "width:200px;hight:200px";><img src="p5.jpg" style = "width:200px;hight:200px";></div>
+    <div class="takimg" style="height:200px;"><img src="img/p1.jpg" style = "width:200px;hight:200px";><img src="img/p2.jpg" style = "width:200px;hight:200px";>
+	<img src="img/p3.jpg" style = "width:200px;hight:200px";><img src="img/p4.jpg" style = "width:200px;hight:200px";><img src="img/p5.jpg" style = "width:200px;hight:200px";></div>
  
  
   
