--- a/index1.html
+++ b/index1.html
@@ -10,9 +10,9 @@
 		<header> 
 		  <hsec3>
 		
-<img src="n1.jpg" style = "width:150px;hight:150px";>
+<img src="img/n1.jpg" style = "width:150px;hight:150px";>
    <p>Dear Customers:<br>
-My Name is Nilanthi Abeygunawardana who is the Prsident & CEO of Nilanthi Tea Factory.  &nbspI am the founder of Nilanthi Tea Factory.    &nbspThank you very much for buying our Tasty Tea..!!</p> 
+My Name is Nilanthi Abeygunawardana who is the Prsident & CEO of Nilanthi Tea Factory.  I am the founder of Nilanthi Tea Factory.    &nbspThank you very much for buying our Tasty Tea..!!</p> 
 
 Nilanthi Abeygunawardana <br>
 President & CEO
@@ -28,13 +28,13 @@ President & CEO
 		<nsec3>
 		  <a href ="index.html">Home</a>
 		
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index2.html"> Products </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index7.html"> Ordering </a>
+	<a href="index2.html"> Products </a>
+		<a href="index7.html"> Ordering </a>
 
 		</nsec3>
 		<nsec4>
 
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index6.html"> Contact US </a>
+		<a href="index6.html"> Contact US </a>
 		
 		</nsec4>
 	
@@ -42,7 +42,7 @@ President & CEO
 		</nav>
 		<col1> <br>
 	Company Established Jan 17th 2017 in a Garage<br>
-	<img src="b1.jpg" style = "width:350px;hight:950px";><br>
+	<img src="img/b1.jpg" style = "width:350px;hight:950px";><br>
 	We made 100 packets of Tea per day<br>
 	We had a hard time to sell them<br>
 	We picked the business in few months<br>
@@ -54,7 +54,7 @@ President & CEO
 
 		<col2> 
 Future Nilanthi Tea Head Office will open in 2018<br>	
-	<img src="b2.jpg" style = "width:350px;hight:950px";><br>
+	<img src="img/b2.jpg" style = "width:350px;hight:950px";><br>
 	We are going to increase the production to 2million Tea packets per day<br>
 	We are planing to deliver Tea Products over 150 countries in the world
 		</col2> 
