--- a/index2.html
+++ b/index2.html
@@ -11,9 +11,9 @@
 
 	<div class="container"> 
 		<header> <h1>Enjoy Nilanthi Tea </h1><br>
-				<img src="any1.gif" style = "width:120px;hight:100px";>
-				<img src="any1.gif" style = "width:120px;hight:100px";>
-				<img src="any1.gif" style = "width:120px;hight:100px";>
+				<img src="img/any1.gif" style = "width:120px;hight:100px";>
+				<img src="img/any1.gif" style = "width:120px;hight:100px";>
+				<img src="img/any1.gif" style = "width:120px;hight:100px";>
 
 		</header> 
 
@@ -22,23 +22,23 @@
 		<nsec5>
 
 		<a href ="index.html">Home</a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index1.html"> About Us </a>	
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index7.html"> Ordering </a>	
+		<a href="index1.html"> About Us </a>	
+		<a href="index7.html"> Ordering </a>	
 
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index6.html"> Contact Us </a>
+		<a href="index6.html"> Contact Us </a>
 		</nsec5>
 		</div>
 		</nav>
 		<col1> 
-		<img src="Green1.jpg" style = "width:250px;hight:100px";><br><br>
+		<img src="img/Green1.jpg" style = "width:250px;hight:100px";><br><br>
 		
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspGreen Tea<br>	&nbsp&nbsp&nbsp	
+		Green Tea<br>	&nbsp&nbsp&nbsp	
 		</col1>
 		<col2> 		
 
 	
-	<img src="Black1.jpg" style = "width:250px;hight:100px";><br><br>
-	              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Black Tea<br><br><br><br><br><br><br><br>
+	<img src="img/Black1.jpg" style = "width:250px;hight:100px";><br><br>
+	               Black Tea<br><br><br><br><br><br><br><br>
 		</col2> 
 
 	</div>
