--- a/index6.html
+++ b/index6.html
@@ -15,18 +15,18 @@
 		<header> 
 		
 		Nilanthi Tea Factory Contacts <br>
-		<img src="c5.jpg" style = "width:250px;hight:30px";>
-		<img src="c4.jpg" style = "width:250px;hight:30px";>
-		<img src="c6.jpg" style = "width:250px;hight:30px";>
+		<img src="img/c5.jpg" style = "width:250px;hight:30px";>
+		<img src="img/c4.jpg" style = "width:250px;hight:30px";>
+		<img src="img/c6.jpg" style = "width:250px;hight:30px";>
 		</header> 
 		<nav> <div>
 
 		<nsec5>
 
 		<a href ="index.html">Home</a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index1.html"> About Us </a>	
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index2.html"> Products </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index7.html"> Ordering </a>
+		<a href="index1.html"> About Us </a>	
+		<a href="index2.html"> Products </a>
+		<a href="index7.html"> Ordering </a>
 	
 	
 		</nsec5>
