--- a/index7.html
+++ b/index7.html
@@ -12,7 +12,7 @@ Java Script File
    
    <link rel="stylesheet" href="styles.css" />
    
-   <script src="modernizr.custom.65897.js"></script>
+   <script src="img/modernizr.custom.65897.js"></script>
    
 </head>
 		<nav> 
@@ -20,13 +20,13 @@ Java Script File
 		<nsec3>
 		  <a href ="index.html">Home</a>
 		
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index2.html"> Products </a>
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index1.html"> About Us </a>
+		<a href="index2.html"> Products </a>
+		<a href="index1.html"> About Us </a>
 
 		</nsec3>
 		<nsec4>
 
-		&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<a href="index6.html"> Contact US </a>
+		<a href="index6.html"> Contact US </a>
 		
 		</nsec4>
 	
